{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 118,
  "lineage": "7a1d6f36-99dd-8fac-f871-0e7b528c0e6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e3d9f4b4fb2d21ed",
            "domain": "vpc",
            "id": "eipalloc-0767aac7b5fd00d27",
            "instance": "i-09272c7f6e8f09288",
            "network_interface": "eni-0a4da0492cf9c4d17",
            "private_dns": "ip-198-168-10-11.us-east-2.compute.internal",
            "private_ip": "198.168.10.11",
            "public_dns": "ec2-3-136-181-160.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.181.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic IP Nahuel Dockers"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nahuel-server1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5d9d301c853a04a",
            "arn": "arn:aws:ec2:us-east-2:492572753794:instance/i-09272c7f6e8f09288",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09272c7f6e8f09288",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "nahuel_class_key1",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a4da0492cf9c4d17",
            "private_dns": "ip-198-168-10-11.us-east-2.compute.internal",
            "private_ip": "198.168.10.11",
            "public_dns": "ec2-3-136-181-160.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.181.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f5cc3b15f9c81504",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0612c522bca74fbf7",
            "tags": {
              "Env": "dev",
              "Name": "Nahuel",
              "Owner": "Curso Dockers"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0628569e227149d5b"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_key_pair.key-class-1",
            "aws_security_group.route_allow_http_ssh",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-026cdedd6f8da0733",
            "owner_id": "492572753794",
            "tags": {
              "Name": "VPC Main"
            },
            "vpc_id": "vpc-0c880fe1546ad7402"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ab3d7a5426722283",
            "owner_id": "492572753794",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026cdedd6f8da0733",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet RT"
            },
            "vpc_id": "vpc-0c880fe1546ad7402"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8dc86f3e1004af9",
            "route_table_id": "rtb-0ab3d7a5426722283",
            "subnet_id": "subnet-0612c522bca74fbf7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.web-public-rt",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "route_allow_http_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492572753794:security-group/sg-0628569e227149d5b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0628569e227149d5b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "route53_allow_ping_shh_apache",
            "name_prefix": null,
            "owner_id": "492572753794",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c880fe1546ad7402"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492572753794:subnet/subnet-0612c522bca74fbf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "198.168.10.0/24",
            "id": "subnet-0612c522bca74fbf7",
            "map_public_ip_on_launch": false,
            "owner_id": "492572753794",
            "tags": {
              "Name": "Nahuel TF subnet-1"
            },
            "vpc_id": "vpc-0c880fe1546ad7402"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:492572753794:vpc/vpc-0c880fe1546ad7402",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "198.168.0.0/16",
            "default_network_acl_id": "acl-04c21df828b418bb0",
            "default_route_table_id": "rtb-01a41c8d70176f8dc",
            "default_security_group_id": "sg-02f8b5b484172c0c1",
            "dhcp_options_id": "dopt-2907c440",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c880fe1546ad7402",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01a41c8d70176f8dc",
            "owner_id": "492572753794",
            "tags": {
              "Location": "US",
              "Name": "VPN curso Dockers - Nahuel"
            }
          }
        }
      ]
    }
  ]
}